--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@angular/common": "~9.0.0",
     "@angular/compiler": "~9.0.0",
     "@angular/core": "~9.0.0",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~9.0.0",
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@angular/service-worker": "~9.0.0",
+    "firebase": "^7.8.1",
     "image-map": "^1.1.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
