--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,41 +1,41 @@
 {
-    "name": "Angular Progressive Web App",
+    "name": "Slush app",
     "short_name": "slush-app",
     "start_url": "./",
     "theme_color": "#008080",
     "background_color": "#008B8B",
     "display": "standalone",
-    "description": "A PWA that is built with Angular",
+    "description": "This is a slush related app",
     "icons": [
         {
-            "src": "/assets/images/icons/icon-16x16.png",
+            "src": "/assets/images/icons/slush.svg",
             "sizes": "16x16",
-            "type": "image/png"
+            "type": "image/svg"
         },
         {
-             "src": "/assets/images/icons/icon-32x32.png",
+             "src": "/assets/images/icons/slush.svg",
              "sizes": "32x32",
-             "type": "image/png"
+             "type": "image/svg"
          },
          {
-             "src": "/assets/images/icons/icon-150x150.png",
+             "src": "/assets/images/icons/slush.svg",
              "sizes": "150x150",
-             "type": "image/png"
+             "type": "image/svg"
          },
          {
-             "src": "/assets/images/icons/icon-180x180.png",
+             "src": "/assets/images/icons/slush.svg",
              "sizes": "180x180",
-             "type": "image/png"
+             "type": "image/svg"
          },
          {
-             "src": "/assets/images/icons/icon-192x192.png",
+             "src": "/assets/images/icons/slush.svg",
              "sizes": "192x192",
-             "type": "image/png"
+             "type": "image/svg"
          },
          {
-             "src": "/assets/images/icons/icon-512x512.png",
+             "src": "/assets/images/icons/slush.svg",
              "sizes": "512x512",
-             "type": "image/png"
+             "type": "image/svg"
          }
     ]
  
