--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -8,6 +8,7 @@
       "resources": {
         "files": [
           "/favicon.ico",
+          "/src/assets/icons/favicon-32x32.png",
           "/index.html",
           "/manifest.webmanifest",
           "/*.css",
